fixed "work" spacing issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,36 +8,22 @@ body {
     margin-top: 2%;
 }
 
-ul {
-    margin-top: -10px;
-    list-style-type: none;
-    padding: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 80%;
-    line-height: 150%;
-}
-
-li {
-    margin-bottom: 20px;
-}
-
-p.mainMenu {
-    max-width: 600px;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    text-decoration: bold;
-    color: black;
-}
-
 p.menu {
     max-width: 600px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-decoration: bold;
     font-size: 100%;
+    font-size: 100%;
     color: black;
+    padding-right: 20px;
+    line-height: 225%;
 }
 
 a.menu {
-    text-decoration: none;
+    max-width: 600px;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-decoration: bold;
+    font-size: 100%;
     font-size: 100%;
     color: black;
     padding-right: 20px;
@@ -45,31 +31,21 @@ a.menu {
 }
 
 a.menu:hover {
-    text-decoration: underline;
-    color: black;
-}
-
-p.category {
+    max-width: 600px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-decoration: bold;
+    font-size: 100%;
     font-size: 100%;
     color: black;
-    font-style: bold;
+    padding-right: 20px;
+    line-height: 225%;
 }
 
-p.project {
+p.mainMenu {
+    max-width: 600px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 100%;
+    text-decoration: bold;
     color: black;
-    font-style: oblique;
-}
-
-p.description {
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
-
-div.gallery {
-    padding-top: 50px;
 }
 
 a.mainMenu {
@@ -86,7 +62,10 @@ a.mainMenu:hover {
     color: #983efb;
 }
 
-
+p.description {
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
 
 a {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -97,8 +76,8 @@ a {
 
 a:hover {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    text-decoration: underline;
     font-size: 100%;
+    text-decoration: underline;
     color: #983efb;
 }
 
@@ -109,8 +88,6 @@ h1 {
     text-decoration: none;
     color: black;
 }
-
-
 
 h2 {
     margin-right: 30%;
